# Add configuration for building the `libgnu.a` library
add_library(libgnu.a STATIC
    argp-ba.c
    argp-fmtstream.c
    argp-parse.c
    argp-pin.c
    argp-xinl.c
    argp.c
    basename.c
    c-ctype.c
    c-strcasecmp.c
    c-strncasecmp.c
    canonicalize.c
    close-stream.c
    dirname.c
    dup-safer.c
    error.c
    fd-safer.c
    filenamecat.c
    fnmatch.c
    freading.c
    getdelim.c
    getline.c
    getprogname.c
    glob.c
    lstat.c
    malloca.c
    mempcpy.c
    mkstemps.c
    openat-die.c
    openat-safer.c
    pipe-safer.c
    printf-args.c
    printf-parse.c
    progname.c
    regex.c
    safe-read.c
    safe-write.c
    sigaction.c
    snprintf.c
    stat-time.c
    std-arg.c
    strcase.c
    strcasestr.c
    strnlen.c
    sys_wait.c
    vasprintf.c
    vfprintf.c
    vprintf.c
    vsnprintf.c
    xalloc-die.c
    xmalloc.c
    xmemdup.c
    xstrndup.c
    xvasprintf.c
)
